# llm-archive-analysis

./: .gitignore  .tmuxp.yaml  README.md  devenv.nix  pyproject.toml
src/llm_archive_analysis/: __init__.py  analysis.py  analyze_llm_archive.py  models.py  parsers.py  serializers.py
tests/: __init__.py  conftest.py  test_analysis.py  test_models.py  test_parsers.py  test_serializers.py
tests/fixtures/: chatgpt_sample.json  claude_sample.json
